# Geometry

./: LICENSE
geometry/: CMakeLists.txt  geometry.h
geometry/c/include/: geometry_c.h
geometry/c/src/: CMakeLists.txt  geometry_c.cpp
geometry/c/test/: CMakeLists.txt  Makefile  geometry_c_test.c
geometry/includes/: Edge.h  Edge3D.h  Ellipse.h  List.h  ListNode.h  ListZ.h  Node.h  Point.h  Point3D.h  Polygon.h  Stack.h  Triangle3D.h  Vertex.h  geometry_config.h  geometry_inner.h
geometry/src/: CMakeLists.txt  Edge.cpp  Edge3D.cpp  Ellipse.cpp  Node.cpp  Point.cpp  Point3D.cpp  Polygon.cpp  Triangie3D.cpp  Vertex.cpp
geometry/test/: CMakeLists.txt  main.cpp
